dist/core/src/test/baseman/invalid-usage/case-multi-params-1/commands/default.d.ts
import { Command } from '../../../../..';
export default class  extends Command {
    execute(name: string, texts: string[], extraTexts: string[]): void;
}
